feat: rt-24310, edu presentations & publications

--- a/web-content/root/education/k-12-outreach/teachers/epic/research/publications.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/research/publications.html
@@ -2,23 +2,29 @@
 	Publications</h3>
 <div class="weteachcs-table">
 	<p>
-		Warner, J. R., Fletcher, C. L., Martin, N. D., Baker, S. N., (in press). Applying the CAPE framework to measure equity and inform policy in computer science education. <em>Policy Futures in Education</em>.</p>
+		Martin, N. D., Garza, E., Wilson Vazquez, A., &amp; Fletcher, C. L. (2022). Scaling professional learning for equitable and inclusive computer science teaching. In <em>2022 Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT) Conference Proceedings.</em></p>
 	<p>
-		Warner, J. R., Plowman, D. L., Osman, D. J., &amp; Schallert, D. L. (in press). The influence of collective and individual sensemaking on how facilitators and teachers implement a professional development programme. <em>Teacher Development</em>.</p>
+		Warner, J. R., Fletcher, C. L., Martin, N. D., Baker, S. N., (2022). Applying the CAPE framework to measure equity and inform policy in computer science education. <em>Policy Futures in Education</em>. <a href="https://doi.org/10.1177/14782103221074467">https://doi.org/10.1177/14782103221074467</a></p>
 	<p>
-		Fletcher, C. L. &amp; Warner, J. R. (in press). Leveraging collective impact to scale computer science teacher professional development and certification. In Mouza, C., Yadav, A., &amp; Leftwich, A. (Eds.), <em>Preparing Teachers to Teach Computer Science: Models, Practices and Policies</em>. Information Age Publishing.</p>
+		Warner, J. R., Plowman, D. L., Osman, D. J., &amp; Schallert, D. L. (2022). The influence of collective and individual sensemaking on how facilitators and teachers implement a professional development programme. <em>Teacher Development, 26(5), 706-726</em>. <a href="https://doi.org/10.1080/13664530.2022.2123849">https://doi.org/10.1080/13664530.2022.2123849</a></p>
 	<p>
-		Fletcher, C. L. &amp; Warner, J.R. (2021). CAPE: A Framework for Assessing Equity throughout the Computer Science Education Ecosystem. <em>Communications of the ACM</em>, <em>64</em>(2), 23-25. <a href="https://doi.org/10.1145/3442373" target="_blank">https://doi.org/10.1145/3442373</a></p>
+		Fletcher, C. L. &amp; Warner, J. R. (2022). Leveraging collective impact to scale computer science teacher professional development and certification. In Mouza, C., Yadav, A., &amp; Leftwich, A. (Eds.), <em>Preparing Teachers to Teach Computer Science: Models, Practices and Policies</em>. Information Age Publishing. <a href="https://www.infoagepub.com/products/Professional-Development-for-In-Service-Teachers">https://www.infoagepub.com/products/Professional-Development-for-In-Service-Teachers</a></p>
 	<p>
-		Warner, J. R., Childs, J., Fletcher, C. L., Martin, N. D., &amp; Kennedy, M. (2021). Quantifying disparities in computer science education: Access, participation, and intersectionality. In <em>Proceedings of the 52</em><em><sup>nd</sup> ACM Technical Symposium on Computer Science Education</em>, 619-625. <a href="https://doi.org/10.1145/3408877.3432392" target="_blank">https://doi.org/10.1145/3408877.3432392</a></p>
+		Koressel, J., Ottenbreit-Leftwich, A., Jantaraweragul, K., Jeon, M., Warner, J. R., &amp; Brown, M. (2022). Investigating CS teacher licensure in Indiana. <em>TechTrends</em>. <a href="https://doi.org/10.1007/s11528-022-00726-9">https://doi.org/10.1007/s11528-022-00726-9</a></p>
 	<p>
-		Childs, J., Zarch, R., Torbey, R., and Fletcher, C. L. (2021). Networked improvement communities as tools for teacher empowerment. Paper presented at the <em>Annual Conference on Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT)</em>, Virtual Event, May 2021.<a href="https://doi.org/10.1109/RESPECT51740.2021.9620620">https://doi.org/10.1109/RESPECT51740.2021.9620620</a></p>
+		Fletcher, C. L. &amp; Warner, J.R. (2021). CAPE: A Framework for Assessing Equity throughout the Computer Science Education Ecosystem. <em>Communications of the ACM</em>, <em>64</em>(2), 23-25. <a href="https://doi.org/10.1145/3442373">https://doi.org/10.1145/3442373</a></p>
 	<p>
-		Fletcher, C. L., Torbey, R., Childs, J., Zarch, R. (2020). Reflections on launching a networked improvement community with computer science educators. Paper presented at the <em>Annual Conference on Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT)</em>, Portland, Oregon, March 2020.<a href="https://doi.org/10.1109/RESPECT49803.2020.9272443">https://doi.org/10.1109/RESPECT49803.2020.9272443</a></p>
+		Martin, N. D., Legleiter, E., Blitz, C., Smith, R., Kendrick, M. (2021). Exploring job-embedded professional learning in rural schools [White Paper]. <a href="https://grandchallenges.100kin10.org/progress/job-embedded-professional-development-programs-for-rural-schools">https://grandchallenges.100kin10.org/progress/job-embedded-professional-development-programs-for-rural-schools</a>.</p>
 	<p>
-		Osman, D. J., &amp; Warner, J. R. (2020). Measuring teacher motivation: The missing link between professional development and practice. <em>Teaching and Teacher Education, 92, </em>103064. <a href="https://doi.org/10.1016/j.tate.2020.103064" target="_blank">https://doi.org/10.1016/j.tate.2020.103064</a></p>
+		Warner, J. R., Childs, J., Fletcher, C. L., Martin, N. D., &amp; Kennedy, M. (2021). Quantifying disparities in computer science education: Access, participation, and intersectionality. In <em>Proceedings of the 52</em><em><sup>nd</sup></em><em> ACM Technical Symposium on Computer Science Education</em>, 619-625. <a href="https://doi.org/10.1145/3408877.3432392">https://doi.org/10.1145/3408877.3432392</a></p>
 	<p>
-		Torbey, R., Martin, N. D., Warner, J. R., &amp; Fletcher, C. L. (2020). Algebra I before high school as a gatekeeper to computer science participation. In <em>Proceedings of the 51st ACM Technical Symposium on Computer Science Education</em>, 839-844. ACM. <a href="https://doi.org/10.1145/3328778.3366877" target="_blank">https://doi.org/10.1145/3328778.3366877</a></p>
+		Childs, J., Zarch, R., Torbey, R., and Fletcher, C. L. (2021). Networked improvement communities as tools for teacher empowerment. Paper presented at the <em>Annual Conference on Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT), </em>Virtual Event, May 2021. <a href="https://doi.org/10.1109/RESPECT51740.2021.9620620">https://doi.org/10.1109/RESPECT51740.2021.9620620</a></p>
+	<p>
+		Fletcher, C. L., Torbey, R., Childs, J., Zarch, R. (2020). Reflections on launching a networked improvement community with computer science educators. Paper presented at<em> </em>the<em> Annual Conference on Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT)</em>, Portland, Oregon, March 2020. <a href="https://doi.org/10.1109/RESPECT49803.2020.9272443">https://doi.org/10.1109/RESPECT49803.2020.9272443</a></p>
+	<p>
+		Osman, D. J., &amp; Warner, J. R. (2020). Measuring teacher motivation: The missing link between professional development and practice. <em>Teaching and Teacher Education, 92, </em>103064. <a href="https://doi.org/10.1016/j.tate.2020.103064">https://doi.org/10.1016/j.tate.2020.103064</a></p>
+	<p>
+		Torbey, R., Martin, N. D., Warner, J. R., &amp; Fletcher, C. L. (2020). Algebra I before high school as a gatekeeper to computer science participation. In <em>Proceedings of the 51st ACM Technical Symposium on Computer Science Education</em>, 839-844. ACM. <a href="https://doi.org/10.1145/3328778.3366877">https://doi.org/10.1145/3328778.3366877</a></p>
 	<p>
 		Sexton, S., Ryoo, J., Garbrecht, L., &amp; Fall, R. (2020). Dimensions of equity in RPPs - A framework to guide partnership discussions. <em>NNERPP Extra, 2</em>(3), 12-18. <a href="http://nnerppextra.rice.edu/dimensions-of-equity-in-rpps-a-framework">http://nnerppextra.rice.edu/dimensions-of-equity-in-rpps-a-framework</a></p>
 	<p>
@@ -26,7 +32,7 @@
 	<p>
 		Fletcher, C.L., Torbey, R., Childs, J., Zarch, R. (2020) Reflections on launching a networked improvement community with computer science educators. In <em>2020 Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT) Conference Proceedings</em>. <a href="https://doi.org/10.1109/RESPECT49803.2020.9272443">https://doi.org/10.1109/RESPECT49803.2020.9272443</a></p>
 	<p>
-		Warner, J. R., Fletcher, C. L., Torbey, R., &amp; Garbrecht, L. S. (2019). Increasing capacity for computer science education in rural areas through a large-scale collective impact model. In <em>Proceedings of the 50</em><em><sup>th</sup> ACM Technical Symposium on Computer Science Education SIGCSE ’19</em>, 1157-1163. ACM. <a href="https://doi.org/10.1145/3287324.3287418" target="_blank">https://doi.org/10.1145/3287324.3287418</a></p>
+		Warner, J. R., Fletcher, C. L., Torbey, R., &amp; Garbrecht, L. S. (2019). Increasing capacity for computer science education in rural areas through a large-scale collective impact model. In <em>Proceedings of the 50<sup>th</sup> ACM Technical Symposium on Computer Science Education SIGCSE '19</em>, 1157-1163. ACM. <a href="https://doi.org/10.1145/3287324.3287418">https://doi.org/10.1145/3287324.3287418</a></p>
 	<p>
 		Fletcher, C.L. &amp; Ramchand, R. (2018). <em>Preparing Texas students for the cyber economy</em>. The University of Texas at Austin. <a href="https://utexas.app.box.com/s/d2nal1mh7amk9g6hfl99f4suui5niubi">https://utexas.app.box.com/s/d2nal1mh7amk9g6hfl99f4suui5niubi</a></p>
 </div>
