--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -210,14 +210,7 @@
 			<td>
 				Expanding Pathways in Computing</td>
 		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/david-carver">Carver, David</a></td>
-			<td>
-				<a href="dcarver@tacc.utexas.edu">dcarver@tacc.utexas.edu</a></td>
-			<td>
-				Large Scale Systems</td>
-		</tr>
+		
 		<tr>
 			<td>
 				<a href="/web/website/about/directory/matthew-cawood">Cawood, Matthew</a></td>
@@ -270,7 +263,7 @@
 			<td>
 				<a href="/web/website/about/directory/dave-cooper">Cooper, Dave</a></td>
 			<td>
-				<a href="mailto:davec@tacc.utexas.edu">davec@tacc.utexas.edu</a></td>
+				<a href="mailto:dcooper@tacc.utexas.edu">dcooper@tacc.utexas.edu</a></td>
 			<td>
 				Large Scale Systems</td>
 		</tr>
@@ -770,7 +763,7 @@
 			<td>
 				HPC Performance &amp; Architectures</td>
 		</tr>
-<tr>
+		<tr>
 			<td>
 				<a href="/web/website/about/directory/vladislav-krendelev"> Krendelev, Vladislav </a></td>
 			<td>
@@ -1156,6 +1149,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/jennifer-schopf">Schopf, Jennifer</a></td>
+			<td>
+				<a href="mailto:jschopf@tacc.utexas.edu">jschopf@tacc.utexas.edu</a></td>
+			<td>
+				Networking Partnerships</td>
+		</tr>
+<tr>
+			<td>
 				<a href="/web/website/about/directory/joy-schwartz">Schwartz, Joy</a></td>
 			<td>
 				<a href="mailto:jschwartz@tacc.utexas.edu">jschwartz@tacc.utexas.edu</a></td>
@@ -1210,7 +1211,7 @@
 			<td>
 				Scalable Visualization Technologies</td>
 		</tr>
-<tr>
+		<tr>
 			<td>
 				<a href="/web/website/about/directory/douglas-southworth">Southworth, Douglas</a></td>
 			<td>
