--- a/web-content/root/about/directory--lead-team.html
+++ b/web-content/root/about/directory--lead-team.html
@@ -1,136 +1,128 @@
-<h3>
-	Director's Office</h3>
-<div class="row">
-	<div class="col-md-2 col-sm-4 col-xs-6">
-		<a href="/web/website/about/directory/dan-stanzione"><img alt="Dan Stanzione, Ph.D." class="img-responsive" src="/documents/1084364/1085295/dan-stanzione.jpg/3030b7cd-b243-4ccb-a379-5ae10c1db281?t=1583521749252" style="float:left; border:0; margin-top: 5px; " /></a></div>
-	<div class="col-md-3 col-xs-6">
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/dan-stanzione">Dan Stanzione</a></h6>
-		<p class="topless">
-			Associate Vice President for Research<br />
-			Executive Director, TACC</p>
-		<h6 class="bottomless">
-			Director's Office</h6>
-		<p class="topless">
-			Arleen Umbay<br />
-			Executive Assistant<br />
-			Phone: 512-471-2763</p>
-	</div>
-	<div class="col-md-4 col-xs-12">
-		<h6 class="bottomless">
-			Main Offices</h6>
-		<p class="topless">
-			<a href="https://goo.gl/maps/zoFh4GbqUvn" target="_blank">Texas Advanced Computing Center</a><br />
-			Advanced Computing Building (ACB)<br />
-			J.J. Pickle Research Campus, Building 205<br />
-			10100 Burnet Road (R8700)<br />
-			Austin, Texas 78758-4497</p>
-		<p>
-			Main Phone: 512-475-9411<br />
-			Fax: 512-475-9445<br />
-			Email: <a href="mailto:info@tacc.utexas.edu">info@tacc.utexas.edu</a></p>
-	</div>
-	<div class="col-md-3 col-xs-12">
-		<h6 class="bottomless">
-			TACC Visualization Laboratory</h6>
-		<p class="topless">
-			The University of Texas at Austin<br />
-			<a href="https://goo.gl/maps/EX1xwZnfj2m" target="_blank">Peter O'Donnell Jr Building</a><br />
-			201 East 24th Street<br />
-			Room 2.404<br />
-			Austin, Texas 78712</p>
-		<p>
-			Vislab Phone: 512-232-5140</p>
-	</div>
-</div>
-<hr class="grayline" />
+<hr style="margin-top: 0px;" />
 <h3>
 	Leadership Team</h3>
+<h4>
+	Directorates</h4>
 <div class="row">
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/bill-barth"><img alt="Bill Barth" class="lt-img" src="/documents/1084364/1085297/bill-barth.jpg" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/bill-barth">Bill Barth</a></h6>
-		<p class="topless">
-			Director of Future Technologies</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/web/website/about/directory/james-carson"><img alt="James Carson" class="lt-img" src="/documents/1084364/1085295/james-carson-lt.png/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/web/website/about/directory/james-carson">James Carson</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Life Sciences Computing Directorate</p>
 	</div>
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/john-cazes"><img alt="John Cazes" class="lt-img" src="/documents/1084364/1085221/john-cazes-square.png/8cd692e2-b860-4661-9564-637459d88e10" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/john-cazes">John Cazes</a></h6>
-		<p class="topless">
-			Director of High Performance Computing</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/web/website/about/directory/john-cazes"><img alt="John Cazes" class="lt-img" src="/documents/1084364/1085221/john-cazes-square.png/8cd692e2-b860-4661-9564-637459d88e10" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/web/website/about/directory/john-cazes">John Cazes</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			High Peformance Computing Directorate</p>
 	</div>
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/tim-cockerill"><img alt="Tim Cockerill" class="lt-img" src="/documents/1084364/1085221/165x165_TimCockerill.jpg/8eebba8d-4be3-4dad-9c3b-97cb4ec05127?t=1442952867873" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/tim-cockerill">Tim Cockerill</a></h6>
-		<p class="topless">
-			Director of User Services</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/web/website/about/directory/tim-cockerill"><img alt="Tim Cockerill" class="lt-img" src="/documents/1084364/1085221/165x165_TimCockerill.jpg/8eebba8d-4be3-4dad-9c3b-97cb4ec05127?t=1442952867873" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/web/website/about/directory/tim-cockerill">Tim Cockerill</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			User Services Directorate<br />
+			&nbsp;</p>
 	</div>
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/maytal-dahan"><img alt="Maytal Dahan" class="lt-img" src="/documents/1084364/1085297/maytal-dahan.jpg/" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/maytal-dahan">Maytal Dahan</a></h6>
-		<p class="topless">
-			Director of Advanced Computing Interfaces</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/katie-cohen"><img alt="Katie Cohen" class="lt-img" src="/documents/1084364/1085295/katie-cohen-lt.jpg" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/katie-cohen">Katie Cohen</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Center Ops and Admin Directorate<br />
+			&nbsp;</p>
 	</div>
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/niall-gaffney"><img alt="Niall Gaffney" class="lt-img" src="/documents/1084364/1085221/niall-gaffney-square.jpg/" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/niall-gaffney">Niall Gaffney</a></h6>
-		<p class="topless">
-			Director of Data Intensive Computing</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/web/website/about/directory/maytal-dahan"><img alt="Maytal Dahan" class="lt-img" src="/documents/1084364/1085297/maytal-dahan.jpg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/web/website/about/directory/maytal-dahan">Maytal Dahan</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Advanced Computing Interfaces Directorate</p>
 	</div>
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/kelly-gaither"><img alt="Kally Gaither" class="lt-img" src="/documents/1084364/1085297/kelly-gaither.jpg/addf4b42-b30e-41cf-827e-0955f87dfacf?t=1412722562000" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/kelly-gaither">Kelly Gaither</a></h6>
-		<p class="topless">
-			Director of Health Analytics</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/carol-fletcher"><img alt="Carol Fletcher" class="lt-img" src="/documents/1084364/1085295/carol-fletcher-lt.jpg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/carol-fletcher">Carol Fletcher</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			<abbr style="text-decoration: none;" title="Expanding Pathways in Computing">EPIC</abbr> Directorate</p>
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/janet-mccord"><img alt="Janet McCord" class="lt-img" src="/documents/1084364/1085297/janet-mccord.jpg/c5d77d39-5524-4344-bea0-91debfe16ac7?t=1412722562000" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/janet-mccord">Janet McCord</a></h6>
-		<p class="topless">
-			Director of Center Operations &amp; Administration</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/web/website/about/directory/niall-gaffney"><img alt="Niall Gaffney" class="lt-img" src="/documents/1084364/1085221/niall-gaffney-square.jpg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/web/website/about/directory/niall-gaffney">Niall Gaffney</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Data and AI Directorate</p>
 	</div>
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/tommy-minyard"><img alt="Tommy Minyard" class="lt-img" src="/documents/1084364/1085297/tommy-minyard.jpg/52b36747-ecae-4ef3-bc8a-137f783f46b1?t=1412803443000" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/tommy-minyard">Tommy Minyard</a></h6>
-		<p class="topless">
-			Director of Advanced Computing Systems</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/kelly-gaither"><img alt="Kelly Gaither" class="lt-img" src="/documents/1084364/1085297/kelly-gaither.jpg/addf4b42-b30e-41cf-827e-0955f87dfacf?t=1412722562000" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/kelly-gaither">Kelly Gaither</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Visualization Directorate</p>
 	</div>
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/paul-navratil"><img alt="Paul Navrátil" class="lt-img" src="/documents/1084364/1085221/paul-navratil-lt-square.png" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/paul-navratil">Paul Navrátil</a></h6>
-		<p class="topless">
-			Director of Visualization</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/rosalia-gomez"><img alt="Rosalia Gomez" class="lt-img" src="/documents/1084364/1085295/rosalia-gomez-lt.jpg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/rosalia-gomez">Rosalia Gomez</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Education &amp; Outreach Directorate</p>
 	</div>
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/jennifer-schopf"><img alt="Jennifer Schopf" class="lt-img" src="/documents/1084364/1085297/jennifer-schopf.jpg" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/jennifer-schopf">Jennifer Schopf</a></h6>
-		<p class="topless">
-			Director of Networking Partnerships</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/web/website/about/directory/tommy-minyard"><img alt="Tommy Minyard" class="lt-img" src="/documents/1084364/1085297/tommy-minyard.jpg/52b36747-ecae-4ef3-bc8a-137f783f46b1?t=1412803443000" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/web/website/about/directory/tommy-minyard">Tommy Minyard</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Advanced Computing Systems Directorate</p>
 	</div>
-	<!--<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/matthew-vaughn"><img alt="Matthew Vaughn" class="lt-img" src="/documents/1084364/1085297/matt-vaughn.jpg/3f4e0a48-b9a4-4939-9e0f-0291c261f82f?t=1412803466000" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/matthew-vaughn">Matthew W. Vaughn</a></h6>
-		<p class="topless">
-			Director of Life Sciences Computing</p>
-	</div>-->
-	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/john-west"><img alt="John West" class="lt-img" src="https://www.tacc.utexas.edu/documents/1084364/1085221/John-West-2018.png" style="border:0; margin-bottom:2px;" /></a>
-		<h6 class="bottomless">
-			<a href="/web/website/about/directory/john-west">John West</a></h6>
-		<p class="topless">
-			Director of Strategic Initiatives</p>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/web/website/about/directory/jennifer-schopf"><img alt="Jennifer Schopf" class="lt-img" src="/documents/1084364/1085297/jennifer-schopf.jpg" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/web/website/about/directory/jennifer-schopf">Jennifer Schopf</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Networking Partnerships Directorate</p>
 	</div>
 </div>
+<h4 style="margin-top:0px;">
+	Offices</h4>
+<div class="row">
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/william-allen"><img alt="Joe Allen" class="lt-img" src="/documents/1084364/1085295/joe-allen-lt.jpeg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/william-allen">Joe Allen</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Campus Engagement</p>
+	</div>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/melyssa-fratkin"><img alt="Melyssa Fratkin" class="lt-img" src="/documents/1084364/1085295/melyssa-fratkin-lt.jpg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/melyssa-fratkin">Melyssa Fratkin</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Industry Engagement</p>
+	</div>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/adam-gaither"><img alt="Adam Gaither" class="lt-img" src="/documents/1084364/1085295/adam-gaither-lt.jpg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/adam-gaither">Adam Gaither</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Enterprise Software</p>
+	</div>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/nathaniel-mendoza"><img alt="Nathaniel Mendoza" class="lt-img" src="/documents/1084364/1085295/nathaniel-mendoza-lt.jpg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/nathaniel-mendoza">Nathaniel Mendoza</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Information Security</p>
+	</div>
+	<div class="col-md-2 col-sm-4 col-xs-6">
+		<a href="/about/directory/suzanne-pierce"><img alt="Suzanne Pierce" class="lt-img" src="/documents/1084364/1085295/suzanne-pierce-lt.jpg/" style="border:0; margin:0px 0px 5px 0px;" /></a>
+		<h5 class="bottomless" style="text-transform: capitalize;">
+			<a href="/about/directory/suzanne-pierce">Suzanne Pierce</a></h5>
+		<p style="margin: 0px 0px 25px 0px; font-size:13px;">
+			Decision Support Systems</p>
+	</div>
+</div>
+<hr style="margin-bottom:0px;" />
